logs/rtt.20260328-174022.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent3)
error[E0432]: unresolved import `vstd::laws_eq`
  --> src/Chap44/DocumentIndex.rs:25:15
   |
25 |     use vstd::laws_eq::obeys_view_eq;
   |               ^^^^^^^ could not find `laws_eq` in `vstd`
   |
note: found an item that was configured out
  --> /home/milnes/projects/verus/source/vstd/vstd.rs:47:9
   |
46 | #[cfg(verus_keep_ghost)]
   |       ---------------- the item is gated here
47 | pub mod laws_eq;
   |         ^^^^^^^

error[E0432]: unresolved import `crate::Chap38::BSTParaStEph::BSTParaStEph::view_ord_consistent`
  --> src/Chap44/DocumentIndex.rs:28:9
   |
28 |     use crate::Chap38::BSTParaStEph::BSTParaStEph::view_ord_consistent;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `view_ord_consistent` in `Chap38::BSTParaStEph::BSTParaStEph`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `apas-verus` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `apas-verus` (lib test) due to 2 previous errors
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 10s
